# opencv-samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
scripts/win/: cmake_build.bat  cmake_generate.bat  cmake_install.bat
src/show_camera/: CMakeLists.txt  main.cpp
src/show_gui/: CMakeLists.txt  imgui_ext.cpp  imgui_ext.h  show_gui.cpp
src/show_image/: CMakeLists.txt  main.cpp
